feat(mcp): JClaw MCP server + bearer-token API auth (JCLAW-282)
External MCP clients (Claude Desktop, Cursor, peer JClaw instances)
can now invoke any JClaw operation via tools auto-derived from the
OpenAPI spec, authenticated with operator-minted API tokens. Token
CRUD, AuthCheck bearer path, scope-aware tool generation, and the
standalone mcp-server Gradle sub-module ship together so the feature
arrives complete rather than in pieces.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>